--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,7 +3,12 @@
 
 <h1>Ratings</h1>
 
+<h2>Register</h2>
+
+<p><a href="/register">Sign-up</a></p>
+
 <h2>Movies</h2>
+
 <p><a href="/movies">View all movies</a></p>
 
 <h2>Users</h2>
