--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 	<title>Ratings</title>
+	{% with messages = get_flashed_messages() %}
+		{% for message in messages %}
+		  {{ message }}
+		{% endfor %}
+	{% endwith %}
+
+
 </head>
 <body>
 	<hr>
