--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,15 +3,25 @@
 
 <h1>Ratings</h1>
 
-<h2>Register</h2>
-
-<p><a href="/register">Sign-up</a></p>
-
 <h2>Movies</h2>
-
 <p><a href="/movies">View all movies</a></p>
+<br><br>
 
 <h2>Users</h2>
 <p><a href="/users">View all users</a></p>
+<br><br>
+
+<h2>Register</h2>
+
+<p><a href="/register">Sign-up</a></p>
+<br><br>
+
+<h2>Login</h2>
+<p><a href="/login">Login</a></p>
+
+<h2>Logout</h2>
+<form action="/logout"></form>
+<type="button">Logout</button>
+
 
 {% endblock %}
