--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Register</h1>
+<h1>Login</h1>
 
-<form action="/register" method="POST">
+<form action="/login", method="POST">
 	Enter email address: <input type="text" name="email">
 	<br><br>
 	Enter your password: <input type="text" name="password">
 
-	<input type="submit" value="wooohhh">
+	<input type="submit" value="Enter">
 </form>
 
 
