Added logic to prevent duplicate emails and added logout function.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -20,8 +20,9 @@
 <p><a href="/login">Login</a></p>
 
 <h2>Logout</h2>
-<form action="/logout"></form>
-<type="button">Logout</button>
+<form action="/logout">
+	<input type="submit" value=Logout>
+</form>
 
 
 {% endblock %}
