--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -7,7 +7,11 @@
 	Enter email address: <input type="text" name="email">
 	<br><br>
 	Enter your password: <input type="text" name="password">
-
+	<br><br>
+	Enter your age: <input type="text" name="age">
+	<br><br>
+	Enter your zipcode: <input type="text" name="zipcode">
+	<br><br>
 	<input type="submit" value="wooohhh">
 </form>
 
