--- a/templates/user_info.html
+++ b/templates/user_info.html
@@ -6,14 +6,11 @@
   <ul>
     {% for user in users %}
       <li>
-    
-          <a href="/user_info">
-            {{ user.email }} ({{ user.user_id }})
-          </a>
-
-
+        <a href="/users/{{ user.user_id }}">
+          {{ user.email }} ({{ user.user_id }})
           
-       
+          
+        </a>
       </li>
     {% endfor %}
   </ul>
