--- a/templates/user_info.html
+++ b/templates/user_info.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h2>Users</h2>
+  <h2>{{ User.email }} Information</h2>
 
   <ul>
     {% for user in users %}
